--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Player Data</title>
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+
 </head>
 <body>
     <div class="navbar">
@@ -17,6 +19,7 @@
                 <th>Player Name</th>
                 <th>Uptime(minutes)</th>
                 <th>Is Admin</th>
+                <th> position x</th>
             </tr>
         </thead>
         <tbody>
@@ -59,12 +62,16 @@
                         const nameCell = document.createElement('td');
                         const uptimeCell = document.createElement('td');
                         const isAdminCell = document.createElement('td');
+                        const playerPosXCell = document.createElement('td');
+        
                         nameCell.textContent = player.name;
                         uptimeCell.textContent = player.uptime;
                         isAdminCell.textContent = player.isAdmin;
+                        playerPosXCell.textContent = player.x;
                         row.appendChild(nameCell);
                         row.appendChild(uptimeCell);
                         row.appendChild(isAdminCell);
+                        row.appendChild(playerPosXCell);
                         tbody.appendChild(row);
                     });
 
