--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,6 @@
 </head>
 <body>
     <div class="navbar">
-        
         <ul class="nav-menu">
             <li><a href="/map">Map</a></li>
         </ul>
@@ -19,7 +18,10 @@
                 <th>Player Name</th>
                 <th>Uptime(minutes)</th>
                 <th>Is Admin</th>
-                <th> position x</th>
+                <th>Is Player In Vehicle</th>
+                <th>Position x</th>
+                <th>Position y</th>
+                <th>Position z</th>
             </tr>
         </thead>
         <tbody>
@@ -62,16 +64,25 @@
                         const nameCell = document.createElement('td');
                         const uptimeCell = document.createElement('td');
                         const isAdminCell = document.createElement('td');
+                        const isPlayerInVehicle = document.createElement('td');
                         const playerPosXCell = document.createElement('td');
+                        const playerPosYCell = document.createElement('td');
+                        const playerPosZCell = document.createElement('td');
         
                         nameCell.textContent = player.name;
                         uptimeCell.textContent = player.uptime;
                         isAdminCell.textContent = player.isAdmin;
+                        isPlayerInVehicle.textContent = player.controller;
                         playerPosXCell.textContent = player.x;
+                        playerPosYCell.textContent = player.y;
+                        playerPosZCell.textContent = player.z;
                         row.appendChild(nameCell);
                         row.appendChild(uptimeCell);
                         row.appendChild(isAdminCell);
+                        row.appendChild(isPlayerInVehicle );
                         row.appendChild(playerPosXCell);
+                        row.appendChild(playerPosYCell);
+                        row.appendChild(playerPosZCell);
                         tbody.appendChild(row);
                     });
 
