changing name of player stats page api

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,7 @@
     <script>
         function updateTable() {
             // Fetch data from the server
-            fetch('/api/fetch-data') // Replace with the correct server endpoint
+            fetch('/api/fetch-data-player-stats') // Replace with the correct server endpoint
                 .then(response => response.json())
                 .then(data => {
                     // Update the table with the new data
