mode uptime in hours an minutes instead of minutes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
         <thead>
             <tr>
                 <th>Player Name</th>
-                <th>Uptime(minutes)</th>
+                <th>Uptime</th>
                 <th>Is Admin</th>
                 <th>Is Player In Vehicle</th>
             </tr>
