--- a/views/Map/index.ejs
+++ b/views/Map/index.ejs
@@ -20,15 +20,23 @@
         width: 32px; /* Adjust the size of the sprite */
         height: 32px; /* Adjust the size of the sprite */
         background-size: cover;
-        background-image: url('https://media.tenor.com/yheo1GGu3FwAAAAC/rick-roll-rick-ashley.gif'); /* Replace with the actual path to your sprite image */
+        background-image: url('images/mapsprites/default-sprite-image.png'); /* Replace with the actual path to your sprite image */
+        cursor: pointer; /* Add a pointer cursor to indicate clickability */
+      }
+      .tractor-marker {
+        width: 32px; /* Adjust the size of the sprite */
+        height: 32px; /* Adjust the size of the sprite */
+        background-size: cover;
+        background-image: url('images/mapsprites/vehicles.png'); /* Replace with the actual path to your sprite image */
         cursor: pointer; /* Add a pointer cursor to indicate clickability */
       }
       /* Define CSS styles for the admin sprite marker */
       .sprite-marker-admin {
         width: 32px; /* Adjust the size of the sprite */
         height: 32px; /* Adjust the size of the sprite */
-        background-size: cover;
-        background-image: url('https://static.wikia.nocookie.net/super-mario-64-official/images/4/4a/Hellomynameisadmin.PNG'); /* Replace with the actual path to your sprite image */
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-image: url('images/mapsprites/admin-sprite.svg'); /* Replace with the actual path to your sprite image */
         cursor: pointer; /* Add a pointer cursor to indicate clickability */
       }
       /* Add this CSS style to your <style> block */
