added icon to main page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
 <head>
     <title>Player Data</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link rel="icon" href="images/ATF_ProfileImage.png" type="image/x-icon">
 
 </head>
 <body>
